--- a/index.html
+++ b/index.html
@@ -411,7 +411,11 @@
                 href=""
                 target="_blank"
               >
-                <svg class="customer1-icon customers-icon">
+                <svg
+                  class="customer1-icon customers-icon"
+                  width="44"
+                  height="49"
+                >
                   <use href="./images/sprite.svg#customer1-icon"></use>
                 </svg>
               </a>
@@ -421,7 +425,11 @@
                 class="regular-customers-list-item-link link"
                 href=""
                 target="_blank"
-                ><svg class="customer2-icon customers-icon">
+                ><svg
+                  class="customer2-icon customers-icon"
+                  width="40"
+                  height="52"
+                >
                   <use href="./images/sprite.svg#customer2-icon"></use></svg
               ></a>
             </li>
@@ -430,7 +438,11 @@
                 class="regular-customers-list-item-link link"
                 href=""
                 target="_blank"
-                ><svg class="customer3-icon customers-icon">
+                ><svg
+                  class="customer3-icon customers-icon"
+                  width="41"
+                  height="43"
+                >
                   <use href="./images/sprite.svg#customer3-icon"></use></svg
               ></a>
             </li>
@@ -439,7 +451,11 @@
                 class="regular-customers-list-item-link link"
                 href=""
                 target="_blank"
-                ><svg class="customer4-icon customers-icon">
+                ><svg
+                  class="customer4-icon customers-icon"
+                  width="80"
+                  height="42"
+                >
                   <use href="./images/sprite.svg#customer4-icon"></use></svg
               ></a>
             </li>
@@ -448,7 +464,11 @@
                 class="regular-customers-list-item-link link"
                 href=""
                 target="_blank"
-                ><svg class="customer5-icon customers-icon">
+                ><svg
+                  class="customer5-icon customers-icon"
+                  width="59"
+                  height="47"
+                >
                   <use href="./images/sprite.svg#customer5-icon"></use></svg
               ></a>
             </li>
@@ -457,7 +477,11 @@
                 class="regular-customers-list-item-link link"
                 href=""
                 target="_blank"
-                ><svg class="customer6-icon customers-icon">
+                ><svg
+                  class="customer6-icon customers-icon"
+                  width="88"
+                  height="45"
+                >
                   <use href="./images/sprite.svg#customer6-icon"></use></svg
               ></a>
             </li>
