--- a/portfolio.html
+++ b/portfolio.html
@@ -93,164 +93,190 @@
             <!-- Проект 1 -->
             <li class="projects-list-item">
               <a class="projects-list-item-link link" href="">
-                <img
-                  class="img"
-                  src="./images/portfolio/project-1.jpg"
-                  alt="Проект 1"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay">
+                  <img
+                    class="img"
+                    src="./images/portfolio/project-1.jpg"
+                    alt="Проект 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <h2 class="project-title">Технокряк</h2>
                 <p class="project-text">Веб-сайт</p>
-                <p class="project-description" hidden>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <!-- Проект 2 -->
             <li class="projects-list-item">
               <a class="projects-list-item-link link" href="">
-                <img
-                  src="./images/portfolio/project-2.jpg"
-                  alt="Проект 2"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay">
+                  <img
+                    class="img"
+                    src="./images/portfolio/project-2.jpg"
+                    alt="Проект 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
                 <p class="project-text">Дизайн</p>
-                <p class="project-description" hidden>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <!-- Проект 3 -->
             <li class="projects-list-item">
-              <a class="projects-list-item-link link" href=""
-                ><img
-                  src="./images/portfolio/project-3.jpg"
-                  alt="Проект 3"
-                  width="370"
-                  height="294"
-                />
+              <a class="projects-list-item-link link" href="">
+                <div class="overlay">
+                  <img
+                    class="img"
+                    src="./images/portfolio/project-3.jpg"
+                    alt="Проект 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <h2 class="project-title">Ресторан Seafood</h2>
                 <p class="project-text">Приложение</p>
-                <p class="project-description" hidden>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <!-- Проект 4 -->
             <li class="projects-list-item">
               <a class="projects-list-item-link link" href="">
-                <img
-                  src="./images/portfolio/project-4.jpg"
-                  alt="Проект 4"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay">
+                  <img
+                    class="img"
+                    src="./images/portfolio/project-4.jpg"
+                    alt="Проект 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <h2 class="project-title">Проект Prime</h2>
                 <p class="project-text">Маркетинг</p>
-                <p class="project-description" hidden>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <!-- Проект 5 -->
             <li class="projects-list-item">
               <a class="projects-list-item-link link" href="">
-                <img
-                  src="./images/portfolio/project-5.jpg"
-                  alt="Проект 5"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay">
+                  <img
+                    class="img"
+                    src="./images/portfolio/project-5.jpg"
+                    alt="Проект 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <h2 class="project-title">Проект Boxes</h2>
                 <p class="project-text">Приложение</p>
-                <p class="project-description" hidden>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <!-- Проект 6 -->
             <li class="projects-list-item">
               <a class="projects-list-item-link link" href="">
-                <img
-                  src="./images/portfolio/project-6.jpg"
-                  alt="Проект 6"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay">
+                  <img
+                    class="img"
+                    src="./images/portfolio/project-6.jpg"
+                    alt="Проект 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <h2 class="project-title">Inspiration has no Borders</h2>
                 <p class="project-text">Веб-сайт</p>
-                <p class="project-description" hidden>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <!-- Проект 7 -->
             <li class="projects-list-item">
               <a class="projects-list-item-link link" href="">
-                <img
-                  src="./images/portfolio/project-7.jpg"
-                  alt="Проект 7"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay">
+                  <img
+                    class="img"
+                    src="./images/portfolio/project-7.jpg"
+                    alt="Проект 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <h2 class="project-title">Издание Limited Edition</h2>
                 <p class="project-text">Дизайн</p>
-                <p class="project-description" hidden>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <!-- Проект 8 -->
             <li class="projects-list-item">
               <a class="projects-list-item-link link" href="">
-                <img
-                  src="./images/portfolio/project-8.jpg"
-                  alt="Проект 8"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay">
+                  <img
+                    class="img"
+                    src="./images/portfolio/project-8.jpg"
+                    alt="Проект 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <h2 class="project-title">Проект LAB</h2>
                 <p class="project-text">Маркетинг</p>
-                <p class="project-description" hidden>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
             <!-- Проект 9 -->
             <li class="projects-list-item">
               <a class="projects-list-item-link link" href="">
-                <img
-                  src="./images/portfolio/project-9.jpg"
-                  alt="Проект 9"
-                  width="370"
-                  height="294"
-                />
+                <div class="overlay">
+                  <img
+                    class="img"
+                    src="./images/portfolio/project-9.jpg"
+                    alt="Проект 1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <h2 class="project-title">Growing Business</h2>
                 <p class="project-text">Приложение</p>
-                <p class="project-description" hidden>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
               </a>
             </li>
           </ul>
